@@ -22,7 +22,7 @@
 
  x build RPM and .deb
 	./makemodulerpm.pl --sign --dir virtual-server --allow-overwrite gpl-virtual-server
-	./makemodulerpm.pl --sign --allow-overwrite virtual-server-theme
+	./makemodulerpm.pl --sign --allow-overwrite --epoch 2 virtual-server-theme
 	./makemoduledeb.pl --dir virtual-server --allow-overwrite gpl-virtual-server
 	./makemoduledeb.pl --allow-overwrite virtual-server-theme
 
